src/styles/global.scss
/*~ ~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~>
<~~         Variables          ~~>
<~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~ ~*/

:root {
  // Colors
  --color-primary: #{$lime-500};
  --color-primary-dark: #{$lime-800};
  --color-text-on-primary: #{$neutral-900};

  --color-background: #{$neutral-900};
  --color-background-card: #{$neutral-700};
  --color-background-surface: #{$neutral-600};
  --color-background-hover: #{$neutral-400};

  --color-border: #{$neutral-500};
  --color-button-border: #{$neutral-300};

  --color-header-text: #{$neutral-50};
  --color-header-text-muted: #{$neutral-100};

  --color-body-text: #{$neutral-50};
  --color-body-text-muted: #{$neutral-200};

  --color-negative: #{$red-500};
  --color-positive: #{$green-500};

  // Typography
  --font-heading: #{$font-heading};
  --font-body: #{$font-body};

  // Spacing
  @each $name, $value in $spaces {
    --space-#{$name}: #{$value};
  }

  // Layout
  --container-max: #{$container-max};
  --container-padding: #{$container-padding};

  // Radius
  --radius-4: #{$radius-4};
  --radius-6: #{$radius-6};
  --radius-8: #{$radius-8};
  --radius-10: #{$radius-10};
  --radius-12: #{$radius-12};
  --radius-16: #{$radius-16};
  --radius-20: #{$radius-20};
  --radius-24: #{$radius-24};
  --radius-full: #{$radius-full};

  // Shadows
  --shadow-sm: #{$shadow-sm};
  --shadow-md: #{$shadow-md};
  --shadow-lg: #{$shadow-lg};

  // Transition
  --transition: #{$transition-base};
  --transition-slow: #{$transition-slow};
}

[data-theme="light"] {
  --color-background: #{$lime-50};
  --color-background-card: #{$neutral-50};
  --color-background-surface: #{$lime-50};
  --color-background-hover: #{$neutral-100};

  --color-border: #{$neutral-50};
  --color-button-border: #{$neutral-500};

  --color-header-text: #{$neutral-900};
  --color-header-text-muted: #{$neutral-700};

  --color-body-text: #{$neutral-700};
  --color-body-text-muted: #{$neutral-600};

  --color-negative: #{$red-800};
  --color-positive: #{$green-800};
}

#moon {
  display: none;
}

#sun {
  @include flex-center;
  gap: 0.25rem;
}

:root[data-theme="light"] {
  #moon {
    @include flex-center;
    flex-direction: row-reverse;
    gap: 0.25rem;
  }

  #sun {
    display: none;
  }
}

/*~ ~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~>
<~~           Reset            ~~>
<~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~ ~*/
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
    overflow-x: hidden;
  }
}

body {
  //   @include type-body;
  color: var(--color-body-text);
  background-color: var(--color-background);
  font-family: var(--font-body);
  // overflow-x: hidden;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  height: auto;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
select,
textarea {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--color-header-text);
  text-wrap: balance;
}

p {
  text-wrap: pretty;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

/*
  11. My own items
*/
html {
  scroll-behavior: smooth;
}

a {
  color: inherit;
  text-decoration: none;
}

ul,
ol {
  list-style: none;
  padding: 0;
}

button {
  color: inherit;
  cursor: pointer;
  font-family: inherit;
  border: none;
  background: none;
}

/*~ ~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~>
<~~        Global Styles       ~~>
<~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~ ~*/

$fluid-headers: (
  h1: clamp(2.5rem, 5vw + 1rem, 4.5rem),
  h2: 1.25rem,
  h3: 0.875rem,
  h4: clamp(1.5rem, 2vw + 1rem, 2rem),
  h5: clamp(1.25rem, 1.5vw + 1rem, 1.5rem),
  h6: clamp(1rem, 1vw + 0.5rem, 1.25rem),
);

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-heading);
  font-weight: 700;
  letter-spacing: -0.5px;
  line-height: 1.2;
  text-transform: uppercase;
}

@each $tag, $clamp-value in $fluid-headers {
  #{$tag} {
    font-size: $clamp-value;
  }
}

h2 {
  font-weight: 400;
}

h3 {
  color: var(--color-header-text-muted);
  font-weight: 400;
  letter-spacing: 1px;
}

section {
  padding-block: clamp(
    var(--space-xl),
    3.0714rem + -1.1905vw,
    calc(var(--space-xl) * 1.25)
  );

  &#history,
  &#compare,
  &#favorites,
  &#log {
    &:not(.active) {
      @include visually-hidden;
    }
  }
}

input {
  color: var(--color-body-text);
}

output {
  color: var(--color-body-text-muted);
}

input,
output {
  font-size: 40px;
  &::placeholder {
    color: var(--color-body-text-muted);
  }
}

select,
.select-button {
  background-color: var(--color-border);
  border: 1px solid var(--color-background-hover);
  border-radius: var(--radius-8);
  color: var(--color-body-text);
  cursor: pointer;
  place-items: center;

  &:hover {
    background-color: var(--color-background-hover);
  }

  .picker-icon {
    transition: transform 0.3s;
  }

  &.open {
    .picker-icon {
      transform: rotate(180deg);
    }
  }
}

.select-button {
  align-items: center;
  block-size: 2.5rem;
  display: flex;
  inline-size: 100%;
}

/*~ ~~~~~~~~~~~~~~~~~~~~~~~~~~ ~~>
<~~         Utilities          ~~>
<~~ ~~~~~~~~~~~~~~~~~~~~~~~~~~ ~*/

.container {
  width: 100%;
  margin-inline: auto;
  max-width: var(--container-max);
  padding-inline: var(--container-padding);
}

.accent-text {
  color: var(--color-primary);
}

.muted-text {
  color: var(--color-body-text-muted);
}

.card {
  background-color: var(--color-background-card);
  border-radius: var(--radius-20);
  display: grid;
  gap: 1.25rem;
  padding: 1.25rem;
  &__top-row {
    @include flex-between;
  }
}

.card--inner {
  background-color: var(--color-background-surface);
  border: 1px solid var(--color-border);
  border-radius: var(--radius-16);
  padding: calc(var(--space-md) * 0.75) calc(var(--space-md) * 1.25);
}

.positive {
  color: var(--color-positive);
}

.negative {
  color: var(--color-negative);
}

.divider {
  background-color: var(--color-text-on-primary);
  border-radius: var(--radius-full);
  height: 6px;
  width: 6px;
}

.btn {
  background: var(--color-background-surface);
  border: 1px solid var(--color-button-border);
  border-radius: var(--radius-8);
  color: var(--color-body-text-muted);
  display: inline-flex;
  font-size: 12px;
  font-weight: 500;
  letter-spacing: 0.5px;
  line-height: 1.3;
  padding: 0.5rem 0.75rem;
  text-transform: uppercase;
  transition:
    color 0.3s,
    background-color 0.3s,
    width 0.3s;

  &:hover {
    background: var(--color-border);
    color: var(--color-body-text);
  }
  &:focus {
    border-color: var(--color-border);
    box-shadow:
      0 0 0 3px var(--color-background-card),
      0 0 0 4px var(--color-primary);
  }
  &.active {
    background: var(--color-primary);
    color: var(--color-text-on-primary);
  }

  &--favorite {
    padding: 0.5rem;
    &.active {
      background: var(--color-background-surface);
      border-color: var(--color-primary);

      &:hover {
        background: var(--color-border);
      }

      &:focus {
        border-color: var(--color-border);
      }
      .star {
        display: none;
      }
      .star-filled {
        display: block;
      }
    }

    .star-filled {
      display: none;
      svg path {
        fill: var(--color-primary);
      }
    }
  }

  &--delete {
    padding: 0.5rem;
    &:hover {
      .icon {
        display: none;
      }
      .icon-filled {
        display: block;
      }
    }

    .icon-filled {
      display: none;
    }
  }

  &#log-conversion {
    &.active {
      transform-origin: left;
      transition:
        background-color 1s ease,
        color 1s ease;
    }
  }
}

.visually-hidden {
  @include visually-hidden;

  & + .empty-section {
    display: flex;
  }
}

.empty-section {
  @include flex-center;
  display: none;
  flex-direction: column;
  gap: 1rem;
  padding-block: 40px;
  text-align: center;
  h2 {
    color: var(--color-header-text-muted);
    text-transform: none;
  }
  p {
    color: var(--color-body-text-muted);
    font-size: 14px;
    line-height: 1.2;
    max-width: 50ch;
  }
}

/* Skip to main content link - accessible to keyboard users and screen readers */
// https://www.a11y-collective.com/blog/skip-to-main-content/
.skip {
  background-color: black;
  color: white;
  left: -9999px;
  opacity: 0; //Sets the link's opacity to 0, making it fully transparent and invisible.
  padding: 1rem 1.5rem;
  position: absolute; //Positions the link absolutely on the page, allowing it to be placed anywhere.
  z-index: 999; //Sets a high z-index, ensuring that the link will be on top of other page elements if it becomes visible.

  &:focus {
    font-weight: 700;
    left: 50%; // When the link receives focus (e.g., when a keyboard user tabs to it), it is repositioned horizontally to the centre of the screen.
    opacity: 1; //The link's opacity is set to 1, making it fully visible.
    outline: 2px solid black;
    outline-offset: 2px;

    transform: translateX(
      -50%
    ); //This centres the link horizontally by moving it back to the left by 50% of its own width.
  }
}

